Cleaning up and organizing repo

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,14 @@
 openai
 httpx
-asyncio
 pydantic
 fastapi
-typing
 python-dotenv
 langchain_community
 langchain_openai
 uvicorn
 langchain
-tiktoken
+tiktoken>=0.6.0
 firebase_admin
-datetime
 numpy
 selenium
-bs4
+beautifulsoup4
