Setting up CI/CD pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,9 @@
-/data
-*/data
+__pycache__
+taxgpt_backend.egg-info
+.DS_Store
 **.pyc
 /.vscode
 */.vscode
-chrome-mac-arm64
-.DS_Store
-taxGPT.egg-info
-taxGPT.egg-info/dependency_links.txt
-taxGPT.egg-info/PKG-INFO
-taxGPT.egg-info/SOURCES.txt
-taxGPT.egg-info/top_level.txt
-firebase_key.json
+/.env
 .env
-__pycache__
+.env
