--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,10 @@ options:
 steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/$PROJECT_ID/taxgpt-backend-image:$SHORT_SHA', '.']
-  id: Creating a new image
+  id: Creating a new Docker image
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['push', 'gcr.io/$PROJECT_ID/taxgpt-backend-image:$SHORT_SHA']
+  id: Pushing updated image to Google Container Registry
 - name: 'gcr.io/cloud-builders/gcloud'
   args: [
     'run', 'deploy', 'taxgpt-backend', '--image', 'gcr.io/$PROJECT_ID/taxgpt-backend-image:$SHORT_SHA',
@@ -17,5 +20,5 @@ steps:
     '--min-instances', '1',
     '--max-instances', '10',
     ]
-  id: Deploying Cloud Run
+  id: Deploying Cloud Run service
 timeout: '1600s'
