fixed cloudbuild.yaml to pass also teh database IP address

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,16 +9,20 @@ steps:
   args: ['push', 'gcr.io/$PROJECT_ID/taxgpt-backend-image:$SHORT_SHA']
   id: Pushing updated image to Google Container Registry
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: [
-    'run', 'deploy', 'taxgpt-backend', '--image', 'gcr.io/$PROJECT_ID/taxgpt-backend-image:$SHORT_SHA',
-    '--region', 'us-central1', '--platform', 'managed', 
-    '--update-secrets=OPENAI_API_KEY=openai-api-key:latest',
-    '--memory', '1Gi',
-    '--cpu', '2',
-    '--concurrency', '80',
-    '--timeout', '30',
-    '--min-instances', '1',
-    '--max-instances', '10',
-    ]
+  entrypoint: 'bash'
+  args:
+  - '-c'
+  - |
+    IP=$(gcloud compute instances describe taxgpt-database \
+        --format='get(networkInterfaces[0].accessConfigs[0].natIP)' \
+        --zone=us-central1-f )
+    echo "DATABASE_IP_ADDRESS=$IP"
+    gcloud run deploy taxgpt-backend --image=gcr.io/$PROJECT_ID/taxgpt-backend-image:$SHORT_SHA \
+      --region=us-central1 --platform=managed \
+      --update-secrets=OPENAI_API_KEY=openai-api-key:latest \
+      --set-env-vars=DATABASE_IP_ADDRESS=$IP \
+      --memory=1Gi --cpu=2 --concurrency=80 --timeout=30 \
+      --min-instances=1 --max-instances=10
   id: Deploying Cloud Run service
+  waitFor: ['Fetch the IP address of the database']
 timeout: '1600s'
