--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,18 +9,22 @@ steps:
   args: ['push', 'gcr.io/$PROJECT_ID/taxgpt-backend-image:$SHORT_SHA']
   id: Pushing updated image to Google Container Registry
 - name: 'gcr.io/cloud-builders/gcloud'
-  entrypoint: 'bash'
-  args:
-  - '-c'
-  - |
-    IP=$(gcloud compute instances describe taxgpt-database \
-        --format='get(networkInterfaces[0].accessConfigs[0].natIP)' \
-        --zone=us-central1-f )
-    echo "DATABASE_IP_ADDRESS=$IP"
-    gcloud run deploy taxgpt-backend --image=gcr.io/$PROJECT_ID/taxgpt-backend-image:$SHORT_SHA \
-      --region=us-central1 --platform=managed \
-      --update-secrets=OPENAI_API_KEY=openai-api-key:latest \
-      --memory=1Gi --cpu=2 --concurrency=80 --timeout=30 \
-      --min-instances=1 --max-instances=10
+  args: [
+    'run', 'deploy', 'taxgpt-backend', 
+    '--image', 'gcr.io/$PROJECT_ID/taxgpt-backend-image:$SHORT_SHA',
+    '--region', 'us-central1', 
+    '--platform', 'managed',
+    '--update-secrets=OPENAI_API_KEY=openai-api-key:latest',
+    '--set-env-vars',
+    'DATABASE_INSTANCE_NAME=taxgpt-database',
+    'PROJECT_ID=$PROJECT_ID',
+    'DATABASE_INSTANCE_ZONE=us-central1-f',
+    '--memory', '1Gi', 
+    '--cpu', '2', 
+    '--concurrency', '80', 
+    '--timeout', '30', 
+    '--min-instances', '1', 
+    '--max-instances', '10'
+  ]
   id: Deploying Cloud Run service
 timeout: '1600s'
