Cleaned up repo. Set up environment variable loading for local and cloud deployment

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,8 +14,8 @@ steps:
     '--image', 'gcr.io/$PROJECT_ID/taxgpt-backend-image:$SHORT_SHA',
     '--region', 'us-central1', 
     '--platform', 'managed',
-    '--update-secrets=OPENAI_API_KEY=openai-api-key:latest',
-    '--set-env-vars=DATABASE_INSTANCE_NAME=taxgpt-database,PROJECT_ID=$PROJECT_ID,DATABASE_INSTANCE_ZONE=us-central1-f,DATABASE_PORT=8080,GPT_MODEL=gpt-4',
+    '--update-secrets=OPENAI_API_KEY=openai-api-key:latest,ENVIRONMENT_VARIABLES=taxgpt-backend-env:latest',
+    # '--set-env-vars=DATABASE_INSTANCE_NAME=taxgpt-database,PROJECT_ID=$PROJECT_ID,DATABASE_INSTANCE_ZONE=us-central1-f,DATABASE_PORT=8080,GPT_MODEL=gpt-4',
     '--memory', '1Gi', 
     '--cpu', '2', 
     '--concurrency', '80', 
