--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,10 @@ numpy
 selenium
 beautifulsoup4
 google-cloud-compute
+google-cloud-storage
+google-auth
+tiktoken>=0.6.0  # otherwise the text-embedding-3-large model does not get recognized
+faiss-cpu
+
+
+
