--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,8 +14,8 @@ steps:
     '--image', 'gcr.io/$PROJECT_ID/taxgpt-backend-image:$SHORT_SHA',
     '--region', 'us-central1', 
     '--platform', 'managed',
-    '--update-secrets=OPENAI_API_KEY=openai-api-key:latest,ENVIRONMENT_VARIABLES=taxgpt-backend-env:latest',
-    '--memory', '1Gi', 
+    '--update-secrets=ENVIRONMENT_VARIABLES=taxgpt-backend-env:latest',
+    '--memory', '2Gi', 
     '--cpu', '2', 
     '--concurrency', '80', 
     '--timeout', '30', 
